<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Noiz2</string>
    
	<string name="main_no_items">No items</string>
    
	<string name="activity_bullet_ml">View ML</string>
    <string name="activity_preferences">Settings</string>
    <string name="activity_help">Help</string>
	<string name="activity_about">About</string>
    
	<string name="copyright">(c) Kenta Cho</string>

	<string name="ported_by">Android (c) Alistair Rutherford</string>

	<string name="ported_where">Glasgow, Scotland, 2009</string>
	
    <string name="author_site">www.netthreads.co.uk</string>
    
	<string name="about">About</string>

	<string name="settings">Settings</string>
	
	<string name="help">Help</string>

    <string name="unknown">Unknown</string>

	<string name="run_title">Start</string>
    
	<string name="dialog_ok">OK</string>
	
	<string name="dialog_title">Profile Results</string>
    
	<string name="loading_cache">Loading ..</string>
    
	<!-- Shared Preferences -->
	<string name="data_preferences">Settings</string>

	<string name="rank">Rank</string>

	<string name="line_thickness">Line Thickness</string>

    <string name="eula_title">License Agreement</string>
    <string name="eula_accept">Accept</string>
    <string name="eula_refuse">Don\'t Accept</string>

    <string name="sound_summary">Toggle Sound Effects</string>
    <string name="difficulty_summary">1=Easy, 10=Insane</string>
    <string name="line_width_summary">Draw line width</string>
    <string name="opengl_summary">Render using OpenGL</string>
    <string name="fighter_offset_summary">Distance offset from touch to fighter</string>
    <string name="trackball_velocity_summary">Trackball rate of change.</string>
    <string name="profile_summary">Show FPS Profile Summary</string>

    <string name="menu_tag">Press Menu for Settings/Help</string>

    <string name="sound_text">Sound on/off"</string>

	<string name="play_mode_adjustable_difficulty_text">Adjustable Difficulty</string>

    <string name="play_mode_original">Original</string>
	
	<string name="rank_text">Difficulty</string>
	
	<string name="line_width_text">Line Width</string>

    <string name="fighter_offset_text">Fighter Offset</string>

    <string name="trackball_velocity_text">Trackball Velocity</string>
    
	<string name="show_profile_text">Show Profile</string>
	
	<string name="render_text">OpenGL</string>

    <string name="play_mode_text">Mode</string>
    
    
</resources>
